made jogs logic
